--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,4 @@
-worker_processes  1;
-
-events {
-    worker_connections  1024;
-}
-
-http {
-    server {
+server {
         listen 80;
         root   /usr/share/nginx/html;
         index  index.html index.htm;
@@ -16,7 +9,6 @@ http {
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
         location / {
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html =404;
         }
     }
-}
